@@ -172,6 +172,9 @@
       <name>Nathan Beyer</name>
     </contributor>
     <contributor>
+      <name>Chris Eldredge</name>
+    </contributor>
+    <contributor>
       <name>Marcelo Liberato</name>
     </contributor>
     <contributor>
